--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 /*---------------Colours--------------*/
 
@@ -24,7 +25,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Bangers, cursive, sans-serif;
+    font-family: Roboto, sans-serif;
 }
 
 .nav ul {
