--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,7 +2,10 @@
 
 /*----------Special Padding / Margin / Text----------*/
 
-
+.row {
+    margin-left: 0; /*helps remove unecessary white space on right vertical*/ 
+    margin-right: 0; /*as above*/
+}
 
 /*---------------Colours--------------*/
 
