--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -376,6 +376,8 @@
   display: none;
 }
 
+
+
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -403,15 +405,13 @@
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
-.text {
-  color: #000000;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
+/* Container for image text */
+.caption-container {
+  font-family: boogaloo, cursive;
   text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: #fafafa;
 }
 
 /* Number text (1/9 etc) */
@@ -421,6 +421,12 @@
   padding: 8px 12px;
   position: absolute;
   top: 0;
+}
+
+.dots-circles {
+  padding-top: 10px; 
+  padding-bottom: 10px;
+  
 }
 
 /* The dots/bullets/indicators */
